force-app/main/default/objects/Billing__c/fields/BillDate__c.field-meta.xml
<CustomField>
    <fullName>BillDate__c</fullName>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>