force-app/main/default/objects/Billing__c/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <displayFormat>BILL-{000000}</displayFormat>
    <label>Billing Number</label>
    <type>AutoNumber</type>
</CustomField>