force-app/main/default/objects/Billing__c/fields/JobLoaction__c.field-meta.xml
<CustomField>
    <fullName>JobLoaction__c</fullName>
    <label>Job Loaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>